# webvtables

./: Cargo.toml  LICENSE  index.html  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: deploy.yml
src/: api.rs  camera.ts  context-menu.ts  draw.rs  ffi.rs  file-io.ts  geom.rs  graph.rs  graph.ts  js.rs  layout.rs  lib.rs  log.rs  main.ts  menu-utils.ts  node-picker.ts  param-input.ts  str.rs  style.css  wasm.ts
src/api/: input.rs  nodes.rs  serialize.rs
src/audio/: engine.ts  knobs.ts  wavetable-node.ts
src/draw/: camera.rs  stack.rs
src/graph/: buffer.rs  keyframes.rs  link.rs  node.rs  param.rs  serialize.rs  socket.rs  ui.rs
src/graph/node/: add.rs  am.rs  band_split.rs  basic_shapes.rs  bit_crush.rs  comb.rs  disperser.rs  filter.rs  fm.rs  gain.rs  harmonic_shift.rs  helpers.rs  iir_filter.rs  inharmonic_shift.rs  invert.rs  noise.rs  output.rs  partials.rs  phase_copy.rs  phase_displace.rs  phase_shift.rs  phaser.rs  pulse_wave.rs  ring_mod.rs  rm.rs  saturation.rs  spectral_gate.rs  spectral_subtract.rs  sync_warp.rs  window.rs
src/renderer/: canvas2d-renderer.ts  glyph-frag.glsl  glyph-vert.glsl  poly-vert.glsl  renderer.ts  repeat-line-frag.glsl  repeat-line-vert.glsl  shader-frag.glsl  shader-vert.glsl  wave-frag.glsl  wave-vert.glsl  webgl2-renderer.ts
src/wasm/: math.ts  types.d.ts
