
cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "webvtabes"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
paste = "1.0.15"

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
trim-paths = "all"
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"]
