
cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "webvtabes"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
heapless = { version = "0.9.3", features = ["serde"] }
microfft = { version = "0.6.0", default-features = false, features = [
  "size-4096",
] }
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
wee_alloc = "0.4.5"

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
trim-paths = "all"
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"]
