
cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "webvtabes"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
heapless = { version = "0.9.3", features = ["serde"] }
microfft = { version = "0.6.0", default-features = false, features = [
  "size-4096",
] }
paste = "1.0.15"
wee_alloc = "0.4.5"

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
trim-paths = "all"
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"]
